@@ -26,6 +26,7 @@
 
 #define YELLOW	MAKE_RGB(255, 255, 0)
 #define PINK	MAKE_RGB(255, 0, 255)
+#define DEFAULT_TRANSPARENT MAKE_RGB(255, 0, 255)
 
 #define WHITE	MAKE_RGB(255, 255, 255)
 #define BLACK	MAKE_RGB(0, 0, 0)
