@@ -1,3 +1,9 @@
+2002-04-18  Heikki Sairanen  <heikki.sairanen@phpoint.net>
+
+	* Main/Include/itemde.h: Price of Avatar of Valpuri added. Also added boot, gauntlet, belt, ring and amulet 
+	* Main/Source/itemde.cpp: Added some generic functions for the added items
+	* Main/Source/lsquare.cpp: Added tame symbol
+
 2002-04-06 Heikki Sairanen <heikki.sairanen@phpoint.net>
 
  	* Main/Include/itemde.h: Added cloak and shield	(actually did this a week ago, but didn't commit)
